增加了动画效果

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,16 @@
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scrollbars="none"
-       android:layout_alignParentBottom="true"
+       android:layout_above="@+id/button_animator"
        android:overScrollMode="never"
        android:background="#fff0fcff"/>
+
+    <Button
+        android:id="@+id/button_animator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Test Animator"
+        android:onClick="testAnimator"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
